--- a/style.css
+++ b/style.css
@@ -662,7 +662,7 @@ align-items: center;
   color: white;
   display: grid;
   padding: 10px;
-  background-color: #8080ff;
+  background-color: #9251F7;
 }
 .icon{
  display: flex;
