--- a/style.css
+++ b/style.css
@@ -543,7 +543,7 @@ input[type = "checbox"]{
 {
 	border:0.5px solid rgba(0,0,0,0.25);
 }
-
+/*
 #checkup:hover,
 #insights:hover,
 #goals:hover,
@@ -551,10 +551,11 @@ input[type = "checbox"]{
 #grapher:hover
 {
   
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  margin-top: 5px;
+   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23); 
+  margin-top: 5px; 
 
 }
+*/
 #profileinfo{
   background: transparent;
   padding: 0;
