--- a/style.css
+++ b/style.css
@@ -616,7 +616,8 @@ align-items: left;
 }
 .nav{
   display: flex;
-  margin-left: 10px;
+  margin-left:10px;
+
 }
 
 .last{
@@ -787,8 +788,7 @@ background:purple;
 }
 .contentwrap{
   display: flex;
-  max-width: 1090px;
-  /*padding: 10px;*/
+  padding: 10px;
 }
 .mini{
   text-align:center;
