--- a/style.css
+++ b/style.css
@@ -688,7 +688,7 @@ h1 {
 .progress-circle {
   position: relative;
   display: inline-block;
-  margin: 1rem;
+  margin: 5px;
   width: 120px;
   height: 120px;
   border-radius: 50%;
