--- a/style.css
+++ b/style.css
@@ -688,7 +688,7 @@ h1 {
 .progress-circle {
   position: relative;
   display: inline-block;
-  margin: 5px;
+  margin: 1rem;
   width: 120px;
   height: 120px;
   border-radius: 50%;
@@ -793,16 +793,19 @@ background:purple;
   text-align:center;
   padding: 10px;
 }
+
 .nav{
   display: flex;
   width: 1070px;
   margin-left: 10px;
 }
+
 .nav-home{
   display: flex;
   width: 1070px;
   margin-left: 20px;
 }
+
 .insight{
   display: flex;
   height: 65px;
