--- a/style.css
+++ b/style.css
@@ -75,8 +75,8 @@ body{
 
 .title{
 	font-size: 20px;
-    color: Black;
-    font-weight: bold;
+    color: #333;
+    font-weight: 600;
 }
 .summary{
    color: grey;
