--- a/style.css
+++ b/style.css
@@ -64,10 +64,13 @@ body{
 }
 
 .type-of-log{
-  font-size: 12px;
-  font-weight: 300;
-  padding: 7px;
-  border-radius: 3px;
+  font-size: 13px;
+  font-weight: 400;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-right: 6px;
+  padding-right: 6px;
+  border-radius: 10px;
   color: #019055;
   background-color: #E5f8e3;
   margin-left: 30px;
