--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ body{
    text-align: center;
   justify-content: center;
   align-items: center;
+  padding-right: 50px;
 }
 .controls{
 	display: flex;
