--- a/style.css
+++ b/style.css
@@ -497,7 +497,7 @@ input[type="number"]::-webkit-outer-spin-button{
     padding-top: 6px;
 }
 .task:hover{
-    background-color: aliceblue;
+    background-color: #f4f0fb;
 }
 .show{
     display: block;
