--- a/import/css/sap-health.webflow.css
+++ b/import/css/sap-health.webflow.css
@@ -101,7 +101,7 @@ a {
   left: auto;
   top: 0px;
   right: auto;
-  width: 1090px;
+  width: 2500px;
   height: auto;
   max-width: 1090px;
   min-width: 1090px;
@@ -221,10 +221,10 @@ a {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
@@ -388,10 +388,7 @@ a {
 .human {
   position: relative;
   z-index: 1;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   height: 100%;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -586,7 +583,10 @@ a {
 .head-detail {
   position: relative;
   z-index: 1;
-  display: none;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   overflow: hidden;
   height: 100%;
   -webkit-box-orient: vertical;
@@ -934,8 +934,8 @@ a {
 
 .directions {
   position: absolute;
-  top: 160px;
-  right: 558px;
+  top: 182px;
+  right: 556px;
   z-index: 1;
   display: -webkit-box;
   display: -webkit-flex;
@@ -1314,7 +1314,7 @@ a {
   display: -ms-flexbox;
   display: flex;
   height: 100%;
-  padding-top: 20px;
+  padding-top: 45px;
   padding-bottom: 20px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -1406,7 +1406,7 @@ a {
   display: flex;
   overflow: auto;
   height: 100%;
-  padding-top: 20px;
+  padding-top: 43px;
   padding-bottom: 20px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -1492,6 +1492,7 @@ a {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  overflow: visible;
   width: 470px;
   height: 260px;
   margin-right: 25px;
@@ -1530,7 +1531,7 @@ a {
 
 .emoji-text-symptom-added {
   margin-right: 0px;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   font-size: 50px;
   text-align: center;
 }
@@ -1692,7 +1693,7 @@ a {
   display: -ms-flexbox;
   display: flex;
   overflow: visible;
-  height: 200px;
+  height: 195px;
   margin: 0px 25px 8px;
   padding-right: 0px;
   padding-left: 0px;
@@ -1807,7 +1808,7 @@ a {
 .help-text-symptom {
   position: absolute;
   left: 914px;
-  top: 157px;
+  top: 182px;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1868,6 +1869,88 @@ a {
 
 .text-field:focus {
   border-color: #9251f7;
+}
+
+.step-text-1 {
+  position: relative;
+  left: 28px;
+  top: 22px;
+  z-index: 3;
+  display: block;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #f05c00;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  text-transform: none;
+}
+
+.step-text-2 {
+  position: absolute;
+  left: 585px;
+  top: 160px;
+  display: block;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #9251f7;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  text-transform: none;
+}
+
+.step-text-3 {
+  position: absolute;
+  left: 585px;
+  top: 533px;
+  display: block;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  color: #019055;
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+  text-transform: none;
 }
 
 @media screen and (max-width: 991px) {
