--- a/style.css
+++ b/style.css
@@ -834,6 +834,7 @@ background:purple;
   padding: 10px;
   border-radius: 10px;
   margin-bottom: 10px;
+  margin-top: 15px;
 }
 .insight:hover{
   background-color: #f4f0fb;
