--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ hr{
     text-decoration-line: none;
     box-shadow: 0 0 20px #eee;
     width: 200px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    /*box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);*/
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     cursor: pointer;
     display: inline-block;
@@ -144,7 +144,7 @@ hr{
 
 }
 .gradient-button:hover{
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+    /*box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);*/
     margin: 8px 10px 12px;
 }
 .gradient-button:active{
