--- a/style.css
+++ b/style.css
@@ -836,7 +836,16 @@ background:purple;
   margin-bottom: 10px;
   margin-top: 15px;
 }
-/*
+
+.insight-home{
+  display: flex;
+  height: 65px;
+  padding: 10px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  margin-top: 15px;
+}
+
 .insight:hover{
   background-color: #f4f0fb;
   border: #9251f7;
@@ -844,7 +853,6 @@ background:purple;
   border-width: 0.5px;
   margin-top: 5px; 
 }
-*/
 .para{
   display: grid;
   margin-left: 20px;
