--- a/style.css
+++ b/style.css
@@ -1014,7 +1014,7 @@ display: grid;
   display: block;
   border-radius: 10px;
   margin-right: 0px;
-  background-color: rgba(171, 168, 168, 0.12);
+  /*background-color: rgba(171, 168, 168, 0.12);*/
   align-items: center;
   justify-content: center;
   text-align: left;
