--- a/style.css
+++ b/style.css
@@ -1074,3 +1074,18 @@ display: grid;
   font-weight: 400;
   text-align: center;
 }
+
+.symptoms-selected-text.test {
+  display: block;
+  margin: 0px;
+  padding: 7px;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  background-color: transparent;
+}
