--- a/style.css
+++ b/style.css
@@ -1044,7 +1044,7 @@ display: grid;
   -webkit-justify-content: start;
   -ms-flex-pack: start;
   justify-content: start;
-  justify-items: center;
+  justify-items: start;  
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
