--- a/style.css
+++ b/style.css
@@ -1030,7 +1030,7 @@ display: grid;
 }
 .symptoms-selected-div {
   display: grid;
-  overflow: scroll;
+  overflow: auto;
   height: 180px;  
   margin: 0px 25px 12px;
   padding-right: 0px;
@@ -1066,7 +1066,7 @@ display: grid;
 
 .symptoms-selected-div-block {
     display: block;
-    overflow: scroll;
+    overflow: auto;
     height: 120px;
     margin: 0px 25px 12px;
     padding-right: 0px;
