--- a/style.css
+++ b/style.css
@@ -523,6 +523,7 @@ input[type = "checbox"]{
   border-color: #9251F7;
   display: block;
   padding-left: 5px;
+  color: black;
   text-align:left;
 }
 #profileinfo,
