--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body{
    color: grey;
    text-align: center;
   justify-content: center;
+  margin-top: 5px;
   align-items: center;
 }
 .controls{
