--- a/style.css
+++ b/style.css
@@ -521,6 +521,7 @@ input[type = "checbox"]{
 .selected{
   background: #f0effa;
   border-width: 0.5px;
+  border: #9251F7;
   border-color: #9251F7;
   display: block;
   padding-left: 5px;
