--- a/style.css
+++ b/style.css
@@ -522,9 +522,10 @@ input[type = "checbox"]{
   background: #f0effa;
   border:0.5px solid #9251F7;
   display: block;
-  padding-left: 5px;
+  padding: 5px;
   color: black;
   text-align:left;
+  border-radius: 8px;
 }
 #profileinfo,
 #checkup,
