--- a/style.css
+++ b/style.css
@@ -490,6 +490,7 @@ input[type="number"]::-webkit-outer-spin-button{
     padding-left: 0;
     color: black;
     text-align:left;
+    border-radius: 8px;
 }
 .task span{
     float: right;
