--- a/style.css
+++ b/style.css
@@ -984,7 +984,7 @@ display: grid;
 .empty-insight{
   width: 485x;
   height: 210px;
-  display: none;
+  display: block;
   border-radius: 10px;
   margin-right: 0px;
   background-color: rgba(171, 168, 168, 0.12);
