--- a/import/css/sap-health.webflow.css
+++ b/import/css/sap-health.webflow.css
@@ -3089,6 +3089,19 @@ a {
   color: #c50000;
 }
 
+.popup-success-message.undo-go-back {
+  margin-top: 10px;
+  margin-bottom: 0px;
+  color: #7a7a7a;
+  font-size: 12px;
+  text-align: center;
+  text-decoration: underline;
+}
+
+.popup-success-message.undo-go-back:hover {
+  color: #1500ff;
+}
+
 .cta1-popup {
   position: static;
   left: 40px;
