--- a/style.css
+++ b/style.css
@@ -1066,39 +1066,8 @@ display: grid;
 }
 
 .symptoms-selected-div-block {
-    display: block;
+    display: flex;height: 162px;flex-direction: column;justify-content: space-around;align-content: stretch;align-items: stretch;
     overflow: auto;
-    height: 120px;
-    /* margin: 0px 25px 12px; */
-    padding-right: 0px;
-    padding-left: 0px;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-box-pack: start;
-    -webkit-justify-content: start;
-    -ms-flex-pack: start;
-    justify-content: start;
-    justify-items: center;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-align-content: start;
-    -ms-flex-line-pack: start;
-    align-content: start;
-    grid-auto-flow: row;
-    grid-auto-columns: 1fr;
-    grid-auto-rows: auto;
-    -ms-grid-columns: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: auto;
-    grid-template-rows: auto;
 }
 
 .symptoms-selected-text {
