--- a/import/css/sap-health.webflow.css
+++ b/import/css/sap-health.webflow.css
@@ -2937,7 +2937,7 @@ a {
   overflow: auto;
   width: 653px;
   height: 500px;
-  padding: 75px 50px;
+  padding: 50px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
