--- a/import/css/sap-health.webflow.css
+++ b/import/css/sap-health.webflow.css
@@ -1483,6 +1483,15 @@ a {
   object-fit: contain;
 }
 
+.start-over-icon {
+  display: block;
+  width: 20px;
+  height: 20px;
+  max-width: 20px;
+  -o-object-fit: contain;
+  object-fit: contain;
+}
+
 .reset-selection-text {
   display: none;
   margin-left: 10px;
